--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div
                     class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column-mobile">
-                    <img src="assets/img/testimonial-slider-asian-dude.png" alt="this should be a persons image">
+                    <img src="assets/img/testimonial-slider-asian-dude.png" alt="customer image">
                     <div>
                         <p class="testimonial-text margin-top-l-mobile">"Jeez. This got me up and running for a job
                             interview!"</p>
