Fix responsive layout

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
             <div class="container flex flex-column-reverse-mobile flex-center--y">
-                <div
-                    class="column-2 column-2-mobile flex flex-column flex-column-mobile text-center-mobile margin-top-l-mobile">
+                <div class="column-2 column-2-mobile flex flex-column flex-column-mobile margin-top-l-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                     <div class="button-wrapper">
@@ -70,7 +69,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="column-2 column-2-mobile flex flex-end flex-center-x-mobile">
+                <div class="column-2 column-2-mobile flex flex-end">
                     <img class="hero-image" src="assets/img/svg/hero-section-3d-printer-illustration.svg"
                         alt="an image of a 3d printer">
                 </div>
@@ -141,7 +140,7 @@
                     <p class="margin-top--s">Feel free to contact us at any time! We will come back to you as soon as
                         possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
                 </div>
-                <div class="column-2 column-2-mobile flex flex-end">
+                <div class="column-2 column-2-mobile flex flex-end text-center-mobile">
                     <form action="https://rebellionwebdesign.github.io/fab-forever/response.html"
                         class="form-wrapper flex flex-column box-shadow flex-center-x-mobile">
                         <h3>Lets stay in contact!</h3>
