Fix responsive classes

--- a/index.html
+++ b/index.html
@@ -59,19 +59,20 @@
         <!--HERO SECTION START-->
         <section class="section-full background-mask flex flex-center">
             <div class="container flex flex-column-reverse-mobile flex-center--y">
-                <div class="column-2 column-2-mobile flex flex-column flex-column-mobile margin-top-l-mobile">
+                <div
+                    class="column-2 column-2-mobile flex flex-column flex-column-mobile margin-top-l-mobile text-center-mobile">
                     <h1><span>NEW</span> to 3D Printing?</h1>
                     <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
-                    <div class="button-wrapper">
+                    <div class="button-wrapper margin-top--l">
                         <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
                             aria-label="this links to the basics page" rel="noopener" target="_self">
                             GET STARTED!
                         </a>
                     </div>
                 </div>
-                <div class="column-2 column-2-mobile flex flex-end">
-                    <img class="hero-image" src="assets/img/svg/hero-section-3d-printer-illustration.svg"
-                        alt="an image of a 3d printer">
+                <div class="column-2 column-2-mobile flex flex-end flex-center-x-mobile flex-end-mobile">
+                    <img class="hero-image margin-bottom--l"
+                        src="assets/img/svg/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
                 </div>
             </div>
         </section>
@@ -84,7 +85,8 @@
                 class="container flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile text-white text-shadow">
                     <h2><span>3D</span>Printing resources for you!</h2>
-                    <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing
+                    <p class="margin-top--s side-padding">Discover how we can help you with getting on track in your 3D
+                        printing
                         journey!
                         We start easy and over time we will get into the nitty gritty stuff. Promised!
                     </p>
@@ -137,12 +139,13 @@
                 <div
                     class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile margin-bottom--l">
                     <h2><span>GOT</span> questions?</h2>
-                    <p class="margin-top--s">Feel free to contact us at any time! We will come back to you as soon as
-                        possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
+                    <p class="margin-top--s side-padding">Feel free to contact us at any time! We will come back to you
+                        as soon as
+                        possible. By the way: by filling out the form you can also see how de dont send spam!</p>
                 </div>
-                <div class="column-2 column-2-mobile flex flex-end text-center-mobile">
+                <div class="column-2 column-2-mobile flex flex-end">
                     <form action="https://rebellionwebdesign.github.io/fab-forever/response.html"
-                        class="form-wrapper flex flex-column box-shadow flex-center-x-mobile">
+                        class="form-wrapper flex flex-column box-shadow">
                         <h3>Lets stay in contact!</h3>
                         <label for="fname">Your first name <span class="red-star">*</span></label>
                         <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
@@ -153,9 +156,9 @@
                             autocomplete="email" required>
                         <div class="legal-wrapper">
                             <p class="legal-text">with <span class="red-star">*</span> marked fields are mandatory</p>
+                            <input class="button margin-top--l" type="submit" value="Send Form!"
+                                aria-label="this submits your form data">
                         </div>
-                        <input class="button margin-top--l" type="submit" value="Send Form!"
-                            aria-label="this submits your form data">
                     </form>
                 </div>
             </div>
