Fix testimonial layout

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
         <!--TESTIMONIAL SECTION START-->
         <section class="section-half flex flex-center">
             <div
-                class="container flex flex-center flex-row text-center-mobile flex-column-mobile container-padding-mobile">
+                class="container flex flex-center flex-column text-center-mobile flex-column-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile flex-order-mobile">
-                    <h2 class="text-shadow"><span>HOW</span> we help people</h2>
+                    <h2 class="text-shadow text-center margin-bottom--l"><span>HOW</span> we help people</h2>
                 </div>
                 <div
                     class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column-mobile">
