--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                         class="form-wrapper flex flex-column box-shadow">
                         <h3>Lets stay in contact!</h3>
                         <label for="fname">Your first name <span class="red-star">*</span></label>
-                        <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
+                        <input type="text" id="fname" name="fname" aria-label="put your first name in here" required>
                         <label for="lname">Your last name <span class="red-star">*</span></label>
-                        <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
+                        <input type="text" id="lname" name="lname" aria-label="put your last name in here" required>
                         <label for="email">Your eMail address <span class="red-star">*</span></label>
-                        <input type="email" id="email" name="email" aria-label="Put your email address in here"
+                        <input type="email" id="email" name="email" aria-label="put your email address in here"
                             autocomplete="email" required>
                         <div class="legal-wrapper">
                             <p class="legal-text">with <span class="red-star">*</span> marked fields are mandatory</p>
