--- a/help.html
+++ b/help.html
@@ -119,7 +119,7 @@
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-center">
                     <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever"
-                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        aria-label="this links to the home page" rel="noopener" target="_self">
                         BACK - THANKS FOR READING!
                     </a>
                 </div>
