Fix aria labels

--- a/basics.html
+++ b/basics.html
@@ -139,12 +139,12 @@
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
                     <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever"
-                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        aria-label="this links to the home page" rel="noopener" target="_self">
                         BACK
                     </a>
                     <a class="page-button text-white"
                         href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
-                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        aria-label="this links to the materials page" rel="noopener" target="_self">
                         NEXT
                     </a>
                 </div>
