--- a/materials.html
+++ b/materials.html
@@ -139,7 +139,7 @@
                     </a>
                     <a class="page-button text-white"
                         href="https://rebellionwebdesign.github.io/fab-forever/models.html"
-                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        aria-label="this links to the models page" rel="noopener" target="_self">
                         NEXT
                     </a>
                 </div>
