--- a/models.html
+++ b/models.html
@@ -80,7 +80,7 @@
                     <source media="(max-width: 768px)"
                         srcset="assets/img/content-images/fab-forever-octocat-mobile.jpg">
                     <img class="printhead rounded margin-top--l" src="assets/img/content-images/fab-forever-octocat.jpg"
-                        alt="this should be a printd 3d model">
+                        alt="this should be a printed 3d model">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
                     <h3 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h3>
@@ -116,11 +116,11 @@
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
                     <a class="page-button text-white"
                         href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
-                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        aria-label="this links to the materials page" rel="noopener" target="_self">
                         BACK
                     </a>
                     <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/help.html"
-                        aria-label="this links to the basics page" rel="noopener" target="_self">
+                        aria-label="this links to the help page" rel="noopener" target="_self">
                         NEXT
                     </a>
                 </div>
