Fix main opening tag

--- a/help.html
+++ b/help.html
@@ -58,17 +58,18 @@
     <!--RESPONSIVE HEADER END-->
 
     <!--HEADER SECTION START-->
-    <section class="section-half flex flex-center flex-column flex-between background">
-        <img class="divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container text-white text-shadow flex flex-center">
-            <h1><span>HELP</span> for common errors</h1>
-        </div>
-        <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
-            alt="the top shape divider">
-    </section>
-
-    <!--CONTENT SECTION START-->
     <main>
+        <section class="section-half flex flex-center flex-column flex-between background">
+            <img class="divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
+            <div class="container text-white text-shadow flex flex-center">
+                <h1><span>HELP</span> for common errors</h1>
+            </div>
+            <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
+                alt="the top shape divider">
+        </section>
+
+        <!--CONTENT SECTION START-->
+
         <section class="section-full flex flex-center section-padding--bottom">
             <div class="container flex flex-column flex-column--mobile">
                 <h2 class="margin-top--l"><span>HELP </span>is on the way!</h2>
@@ -84,11 +85,14 @@
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
                     <h3 class="margin-bottom--s"><span>CLOGGED </span>nozzles</h3>
-                    <p>While printing a model there are a few errors which can occur while printing. The most common one
+                    <p>While printing a model there are a few errors which can occur while printing. The most common
+                        one
                         is the clogged nozzle. You can identify the error by hearing a loud clicking sound from the
                         printers nozzle.
-                        This means, that something is blocking the way for the molten plastic to come out of the nozzle.
-                        This can be resolved by changing the old nozzle for a new one followed by heating up the clogged
+                        This means, that something is blocking the way for the molten plastic to come out of the
+                        nozzle.
+                        This can be resolved by changing the old nozzle for a new one followed by heating up the
+                        clogged
                         nozzle and cleaning it.
                     </p>
                 </article>
@@ -96,7 +100,8 @@
                     <h3 class="margin-bottom--s"><span>BED </span>is not level</h3>
                     <p>One of the most crucial parts is the bed leveling. If your printbed is not levelled correctly
                         (this means it is perpendicular to the nozzle) it can lead to a few errors ranging from
-                        too wide or narrow lines (messes up the models dimension) or the molten plastic not coming out
+                        too wide or narrow lines (messes up the models dimension) or the molten plastic not coming
+                        out
                         at all. The best solution here is to pay extreme attention to how you level your bed. Some
                         printers have inbuilt routines to do that and some printers can also do it automatically.
                     </p>
@@ -114,7 +119,8 @@
                 <article>
                     <h3 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h3>
                     <p>This is an easy one. When the 3D model doesnt appear in the slicer, it usually has to do with
-                        flipped normals. You can fix that easily by recalculating the normals in your modeling software.
+                        flipped normals. You can fix that easily by recalculating the normals in your modeling
+                        software.
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-center">
