--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
                 class="container flex flex-row flex-center--y flex-column-mobile text-center-mobile container-padding-mobile">
                 <div class="column-2 column-2-mobile text-white text-shadow">
                     <h2><span>3D</span>Printing resources for you!</h2>
-                    <p class="margin-top--s side-padding">Discover how we can help you with getting on track in your 3D
-                        printing
-                        journey!
+                    <p class="margin-top--s side-padding">
+                        Discover how we can help you with getting on track in your 3D printing journey!
                         We start easy and over time we will get into the nitty gritty stuff. Promised!
                     </p>
                 </div>
@@ -125,7 +124,9 @@
                     <div>
                         <p class="testimonial-text margin-top-l-mobile">"Jeez. This got me up and running for a job
                             interview!"</p>
-                        <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
+                        <p>
+                            <em>Kaneda Yamagata - CTO MeshBash</em>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -139,9 +140,10 @@
                 <div
                     class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile margin-bottom--l">
                     <h2><span>GOT</span> questions?</h2>
-                    <p class="margin-top--s side-padding">Feel free to contact us at any time! We will come back to you
-                        as soon as
-                        possible. By the way: by filling out the form you can also see how de dont send spam!</p>
+                    <p class="margin-top--s side-padding">
+                        Feel free to contact us at any time! We will come back to you as soon as possible.
+                        By the way: by filling out the form you can also see how de dont send spam!
+                    </p>
                 </div>
                 <div class="column-2 column-2-mobile flex flex-end">
                     <form action="https://rebellionwebdesign.github.io/fab-forever/response.html"
@@ -177,17 +179,18 @@
             <div class="column-2 column-2-mobile flex flex-center-x-mobile flex-end ">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to instagram"><img class="social-icon no-margin"
-                            src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
+                        aria-label="this link sends you to instagram">
+                        <img class="social-icon no-margin" src="assets/img/svg/instagram.svg"
+                            alt="the instagram logo"></a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to facebook"><img class="social-icon"
-                            src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
+                        aria-label="this link sends you to facebook">
+                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to twitter"><img class="social-icon"
-                            src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
+                        aria-label="this link sends you to twitter">
+                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon"
-                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
+                        aria-label="this link sends you to slack">
+                          <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
