--- a/help.html
+++ b/help.html
@@ -97,12 +97,13 @@
                 </article>
                 <article>
                     <h2 class="margin-bottom--s"><span>BED </span>is not level</h2>
-                    <p>One of the most crucial parts is the bed leveling. If your printbed is not levelled correctly
-                        (this means it is perpendicular to the nozzle) it can lead to a few errors ranging from
-                        too wide or narrow lines (messes up the models dimension) or the molten plastic not coming
-                        out
-                        at all. The best solution here is to pay extreme attention to how you level your bed. Some
-                        printers have inbuilt routines to do that and some printers can also do it automatically.
+                    <p>
+                      One of the most crucial parts is the bed leveling. If your printbed is not levelled correctly
+                      (this means it is perpendicular to the nozzle) it can lead to a few errors ranging from
+                      too wide or narrow lines (messes up the models dimension) or the molten plastic not coming
+                      out
+                      at all. The best solution here is to pay extreme attention to how you level your bed. Some
+                      printers have inbuilt routines to do that and some printers can also do it automatically.
                     </p>
                 </article>
                 <picture class="flex flex-center margin-bottom--l">
@@ -142,17 +143,17 @@
             <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to instagram"><img class="social-icon"
-                            src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
+                        aria-label="this link sends you to instagram">
+                        <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to facebook"><img class="social-icon"
-                            src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
+                        aria-label="this link sends you to facebook">
+                        <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to twitter"><img class="social-icon"
-                            src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
+                        aria-label="this link sends you to twitter">
+                        <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon"
-                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
+                        aria-label="this link sends you to slack">
+                        <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo"></a>
                 </div>
             </div>
         </div>
