--- a/models.html
+++ b/models.html
@@ -61,11 +61,11 @@
     <main>
         <section class="section-half flex flex-center flex-column flex-between background">
             <img class="divider" src="assets/img/svg/shape-divider-top.svg" alt="the top shape divider">
-            <div class="container container-mobile text-white text-shadow flex flex-center">
-                <h1><span>MODELS</span> for 3D Printing</h1>
-            </div>
-            <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
-                alt="the top shape divider">
+              <div class="container container-mobile text-white text-shadow flex flex-center">
+                  <h1><span>MODELS</span> for 3D Printing</h1>
+              </div>
+              <img class="flip-x divider-bottom divider" src="assets/img/svg/shape-divider-bottom.svg"
+                  alt="the top shape divider">
         </section>
 
         <!--CONTENT SECTION START-->
@@ -83,15 +83,19 @@
                         alt="this should be a printed 3d model">
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
-                    <h2 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h2>
-                    <p>A 3D model represents geometry in 3D space. It is defined by vertices, edges and faces and also
+                    <h2 class="margin-bottom--s">
+                        <span>WHAT </span>are 3D Printing models?
+                    </h2>
+                    <p>
+                        A 3D model represents geometry in 3D space. It is defined by vertices, edges and faces and also
                         their position in 3D space (X, Y and Z axis). The most common file type for 3D printers is the
                         STL (STereoLithography) file format and can be exported from a variety of softwares.
                     </p>
                 </article>
                 <article>
                     <h2 class="margin-bottom--s"><span>HOW </span>can I make them?</h2>
-                    <p>3D models are made with CAD programs like Fusion360 or Moi3D. There is a learning curve to these
+                    <p>
+                        3D models are made with CAD programs like Fusion360 or Moi3D. There is a learning curve to these
                         type of programs nut fortunately it is not very steep, depending on what you need to do.
                     </p>
                 </article>
@@ -107,15 +111,15 @@
                 </picture>
                 <article class="margin-top--l margin-bottom--l">
                     <h2 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h2>
-                    <p>Getting hold of 3D models is not very hard. There are plenty of sites in the internet which
+                    <p>
+                        Getting hold of 3D models is not very hard. There are plenty of sites in the internet which
                         provide them. The most popular site is Thingiverse, but there are also other sites like
                         Cults or CGTrader. You can search for what you need there, but be aware that some models need to
                         be paid.
                     </p>
                 </article>
                 <div class="button-wrapper-bottom margin-top--l flex flex-row flex-between">
-                    <a class="page-button text-white"
-                        href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                    <a class="page-button text-white" href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
                         aria-label="this links to the materials page" rel="noopener" target="_self">
                         BACK
                     </a>
@@ -138,17 +142,21 @@
             <div class="column-2 column-2-mobile flex flex-end">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to instagram"><img class="social-icon"
-                            src="assets/img/svg/instagram.svg" alt="the instagram logo"></a>
+                        aria-label="this link sends you to instagram">
+                          <img class="social-icon" src="assets/img/svg/instagram.svg" alt="the instagram logo">
+                    </a>
                     <a href="https://www.facebook.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to facebook"><img class="social-icon"
-                            src="assets/img/svg/square-facebook.svg" alt="the facebook logo"></a>
+                        aria-label="this link sends you to facebook">
+                          <img class="social-icon" src="assets/img/svg/square-facebook.svg" alt="the facebook logo">
+                    </a>
                     <a href="https://www.twitter.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to twitter"><img class="social-icon"
-                            src="assets/img/svg/square-twitter.svg" alt="the twitter logo"></a>
+                        aria-label="this link sends you to twitter">
+                          <img class="social-icon" src="assets/img/svg/square-twitter.svg" alt="the twitter logo">
+                    </a>
                     <a href="https://www.slack.com" rel="noopener" target="_blank"
-                        aria-label="this link sends you to slack"><img class="social-icon"
-                            src="assets/img/svg/slack.svg" alt="the slack logo"></a>
+                        aria-label="this link sends you to slack">
+                          <img class="social-icon" src="assets/img/svg/slack.svg" alt="the slack logo">
+                    </a>
                 </div>
             </div>
         </div>
